# ragTools

./: .coverage  .env  .env.example  .gitignore  .pylintrc  =1.3.2  =3.0.43  =3.2.1  COMPLETE_SESSION_SUMMARY.md  FINAL_SESSION_SUMMARY_14_FIXES.md  FIX_13_KNOWLEDGE_GRAPH_VECTOR_STORE.md  FIX_SUMMARY_async_context_manager.md  FIX_SUMMARY_embedding_dimensions.md  FIX_SUMMARY_token_type_ids.md  MIGRATION_TEST_FIXES.md  OVERALL_FIX_SUMMARY.md  PROGRESS_UPDATE.md  QUICK_REFERENCE_CARD.md  QUICK_START_CONTINUE_FIXING.md  README.md  STRATEGY_TEST_FIXES_FINAL_REPORT.md  STRATEGY_TEST_FIXES_SUMMARY.md  STRATEGY_TEST_FIX_PATTERNS.md  TEST_RESULTS_AFTER_FIXES.md  agentic_debug.json  agentic_debug_final.json  agentic_final_debug.json  agentic_rag_after_migration.json  agentic_status.json  alembic.ini  all_strategies_validation.json  all_tests.txt  broken_links_report.txt  broken_links_report_2.txt  cli-config.yaml  create_keyword_table.py  create_strategy_migrations.sh  debug_agent_prompt.py  debug_agentic_join.py  debug_contextual.py  (+86 more)
.agent/: COMPLETION_SUMMARY.md  ERROR_FIX_SUMMARY.md  QUICK_COMPLETION_OVERVIEW.md  completion_analysis.py  completion_table.csv  epic_summary.csv
config/: services.yaml
devscripts/: build_tests_yaml.py  impact_analyzer.py
docs/: BACKLOG.md  CLI-USER-GUIDE.md  DEVELOPMENT-STANDARDS.md  ONNX-PROVIDER-SUMMARY.md  ONNX_EMBEDDING_SETUP.md  TEST-MIGRATION-ONNX.md  index.md  rag-factory-project-plan.md  semantic-local-pair-guide.md
docs/architecture/: design-patterns.md  overview.md
docs/configuration/: QUICK-REFERENCE.md  environment-variables.md  service-registry-schema.md  strategy-pair-schema.md  troubleshooting.md
docs/contributing/: index.md
docs/database/: CONSOLIDATION_PLAN.md  ENVIRONMENT_VARIABLES.md  IMPLEMENTATION_CONTEXT.md  MIGRATION_AUDIT.md  MIGRATION_MANAGER_REMOVAL.md  README.md
docs/epics/: README.md  epic-01-core-infrastructure.md  epic-02-database-storage.md  epic-03-core-services.md  epic-04-priority-strategies.md  epic-05-agentic-advanced.md  epic-06-multi-query-contextual.md  epic-07-experimental-strategies.md  epic-08-observability.md  epic-08.5-development-tools.md  epic-09-documentation.md  epic-10-lightweight-dependencies.md  epic-11-dependency-injection.md  epic-12-pipeline-separation.md  epic-13-indexing-strategies.md  epic-14-cli-enhancements.md  epic-15-test-coverage-improvements  epic-16-database-consolidation.md  epic-17-strategy-pair-configuration.md  epic-18-gui.md  rag-factory-project-plan.md
docs/getting-started/: first-query.md  (+3 more)
examples/: README.md  agentic_rag_example.py  benchmark_dataset_example.json  chunking_example.py  cli_config_example.yaml  contextual_retrieval_example.py  database_context_usage.py  database_example.py  embedding_service_example.py  hierarchical_rag_example.py  knowledge_graph_example.py  late_chunking_example.py  migration_validator_usage.py  observability_demo.py  onnx_embedding_example.py  query_expansion_example.py  self_reflective_demo.py  semantic_local_workflow.py
migrations/: env.py
rag_factory/: __init__.py  __init__.py.backup  __version__.py  config.py  factory.py  legacy_config.py  pipeline.py
rag_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sample-docs/: embeddings_explained.txt  machine_learning.txt  python_basics.txt
scripts/: cleanup_schema_migrations.py  convert_finetuned_to_onnx.py  convert_model_to_onnx.py  download_embedding_model.py  register_strategies.py  setup_database.sh  test_database.sh  test_embedding_model.py  validate_onnx_model.py  validate_strategy_pairs.py  verify_fine_tuned_embeddings.py
strategies/: README.md  agentic-rag-pair.yaml  context-aware-chunking-pair.yaml  contextual-retrieval-pair.yaml  fine-tuned-embeddings-pair.yaml  hierarchical-rag-pair.yaml  hybrid-search-pair.yaml  keyword-pair.yaml  knowledge-graph-pair.yaml  late-chunking-pair.yaml  multi-query-pair.yaml  query-expansion-pair.yaml  reranking-pair.yaml  self-reflective-pair.yaml  semantic-api-pair.yaml  semantic-local-pair.yaml
tests/: .env.test  README.md  README_TEST_RUNNER.md  TEST_EXECUTION_RESULTS.md  TEST_REPORT.md  batch_migrate.py  batch_migrate_unit.py  check_migration_status.py  conftest.py  failed_test_files.txt  failures.txt  monitor_file_tests.sh  run_tests_by_file.sh  setup_test_db.py  skipped_test_files.txt  test_agentic_workflow.py  test_files_list.txt  test_mock_registry.py  test_output.tmp  test_results.txt  test_results_by_file (copy 1).txt  test_results_by_file.txt  test_summary_by_file.txt  timeout_test_files.txt  unit_migration_plan.py
(+1117 files in other folders)
