[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-factory"
version = "0.1.0"
description = "A flexible factory system for combining multiple RAG strategies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RAG Factory Team", email = "team@rag-factory.example.com"}
]
keywords = ["rag", "retrieval", "llm", "ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
    "numpy>=1.20.0",
    "openai>=1.12.0",
    "cohere>=4.47",
    "anthropic>=0.18.1",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.3",
    "networkx>=3.2.1",
    "tenacity>=8.2.3",
    "tiktoken>=0.5.2",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "flask>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "pypdf2>=3.0.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.0",
    "pandas>=2.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]
watch = [
    "watchdog>=3.0.0",
]
cli = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]
all = [
    "rag-factory[dev,watch,cli]",
]

[project.scripts]
rag-factory = "rag_factory.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/rag-factory"
Documentation = "https://rag-factory.readthedocs.io"
Repository = "https://github.com/yourusername/rag-factory"
Issues = "https://github.com/yourusername/rag-factory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_factory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=rag_factory --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
